5851
Is this expected behaviour?

{noformat} 
Welcome to Scala version 2.10.0.r25217-b20110702020235 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val o = Some(Seq(1,2,3))
o: Some[Seq[Int]] = Some(List(1, 2, 3))

scala> o.flatten
<console>:9: error: Cannot prove that Seq[Int] <:< Option[B].
              o.flatten
                ^
{noformat} 


"workaround":
{noformat} 
scala> o.toList.flatten
res1: List[Int] = List(1, 2, 3)
{noformat} 
